almost ALMOST almost  done

--- a/style.css
+++ b/style.css
@@ -32,3 +32,8 @@ td, th {
     border: 1px solid black;
     padding: 5px 10px;
 }
+
+#navmenu {
+    display: flex;
+    justify-content: space-between;
+}
