--- a/style.css
+++ b/style.css
@@ -36,8 +36,8 @@ table {
     margin: 15px 0;
 }
 
-td, th {
-    border: 1px solid black;
-    padding: 5px 10px;
+@media screen and (max-width:769px){
+    #image {
+        display: none;
+    }
 }
-
